--- a/app/src/main/res/layout/activity_dueno_de_carga_main.xml
+++ b/app/src/main/res/layout/activity_dueno_de_carga_main.xml
@@ -137,7 +137,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button11"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        app:layout_constraintVertical_bias="0.015" />
 
     <Button
         android:id="@+id/btnCerrarSesion"
