--- a/app/src/main/res/layout/activity_dueno_de_carga_main.xml
+++ b/app/src/main/res/layout/activity_dueno_de_carga_main.xml
@@ -118,6 +118,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:onClick="solicitudCarga"
         android:text="SOLICITAR TRANSPORTE DE CARGA"
         app:layout_constraintEnd_toStartOf="@+id/textView17"
         app:layout_constraintStart_toStartOf="parent"
