--- a/app/src/main/res/layout/activity_carga_fragil_main.xml
+++ b/app/src/main/res/layout/activity_carga_fragil_main.xml
@@ -7,14 +7,21 @@
     android:orientation="vertical"
     tools:context=".CargaFragilMainActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CARGA FRAGIL"
-        android:textSize="30sp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="30dp"
+        android:text="CARGA FRAGIL"
         android:textAlignment="center"
-        android:layout_gravity="center_horizontal"/>
+        android:textSize="30sp" />
 
     <EditText
         android:layout_width="match_parent"
