--- a/app/src/main/res/layout/activity_carga_peligrosa_main.xml
+++ b/app/src/main/res/layout/activity_carga_peligrosa_main.xml
@@ -7,6 +7,13 @@
     android:orientation="vertical"
     tools:context=".CargaPeligrosaMainActivity">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
