--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/opcion1"
-        android:title="Chat"/>
+        android:title="Chat"
+        android:icon="@drawable/icon_chat"
+        app:showAsAction="always"/>
+
     <item
         android:id="@+id/opcion2"
-        android:title="Ajustes"/>
+        android:title="Ajustes"
+        android:icon="@drawable/icono_ajustes"
+        app:showAsAction="always"/>
+
     <item
         android:id="@+id/opcion3"
-        android:title="Cerrar sesión"/>
+        android:title="Cerrar sesión" />
+
 
 
 </menu>
