--- a/app/src/main/res/layout/activity_carga_general_main.xml
+++ b/app/src/main/res/layout/activity_carga_general_main.xml
@@ -34,5 +34,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/btnEnviarSolicitud"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enviar Solicitud de carga"
+        android:onClick="enviarSolicitud"/>
+
+
 
 </LinearLayout>
