--- a/app/src/main/res/layout/activity_ciudad_destino_main.xml
+++ b/app/src/main/res/layout/activity_ciudad_destino_main.xml
@@ -23,6 +23,13 @@
         android:textAlignment="center"
         android:layout_gravity="center_horizontal"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnEnviarSolicitud"
+        android:text="SIGUIENTE"
+        android:onClick="enviarSolicitud" />
+
     <ListView
         android:id="@+id/listViewCiudadDestino"
         android:layout_width="match_parent"
