--- a/app/src/main/res/layout/activity_propietario_camion.xml
+++ b/app/src/main/res/layout/activity_propietario_camion.xml
@@ -7,12 +7,11 @@
     tools:context=".PropietarioCamionActivity">
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbarPropietario"
         layout="@layout/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/textView8"
@@ -20,15 +19,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="77dp"
         android:layout_marginLeft="77dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="77dp"
         android:layout_marginRight="77dp"
+        android:layout_marginBottom="28dp"
         android:text="Hola, Propietario Del Camion"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
