--- a/app/src/main/res/layout/activity_solicitudes_carga_propietario.xml
+++ b/app/src/main/res/layout/activity_solicitudes_carga_propietario.xml
@@ -5,28 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CiudadOrigenMainActivity">
-
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".solicitudesCargaPropietario">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SELECCIONA TU CIUDAD DE ORIGEN"
-        android:textSize="20sp"
+        android:text="SOLICITUDES DE CARGA"
+        android:textSize="30sp"
         android:layout_marginBottom="30dp"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal"/>
 
+
     <ListView
-        android:id="@+id/listViewCiudadorigen"
+        android:id="@+id/listaCargasSoli"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
+
+
 
 
 
