--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/opcion1"
         android:title="Chat"
-        android:icon="@drawable/icon_chat"
+        android:icon="@drawable/ic_baseline_notifications_active_24"
         app:showAsAction="always"/>
 
     <item
