--- a/app/src/main/res/layout/activity_ciudad_destino_main.xml
+++ b/app/src/main/res/layout/activity_ciudad_destino_main.xml
@@ -33,9 +33,19 @@
     <ListView
         android:id="@+id/listViewCiudadDestino"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="458dp" >
 
+        <TextView
+            android:id="@+id/textView21"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Escribe tu dirreción" />
+    </ListView>
 
+    <EditText
+        android:id="@+id/direccion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
