--- a/app/src/main/res/layout/activity_ciudad_origen_main.xml
+++ b/app/src/main/res/layout/activity_ciudad_origen_main.xml
@@ -26,8 +26,18 @@
     <ListView
         android:id="@+id/listViewCiudadorigen"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="535dp" />
 
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Escribe tu dirreción" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/direccion"/>
 
 
 </LinearLayout>
